Bug 1611589 - Fix precedence of font-feature-settings vs disabling of ligatures due to letter-spacing. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D61060